# boole-rs

./: .gitignore  Cargo.toml  README.md  katex-header.html
src/: bit.rs  bits.rs  byte.rs  bytepos.rs  lib.rs
src/distances/: mod.rs
