[package]
name = "bool-rs"
version = "0.1.0"
authors = ["Vlad Eminovici <veminovici@hotmail.com>"]
categories = ["algorithms", "data-structures"]
description = "A library of things."
edition = "2021"
keywords = [ "distances"]
readme = "README.md"
repository = "https://github.com/veminovici/boole-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]